Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-4669

compile error on ppc64: __ksymtab_ldiskfs_ext_pblock causes a section type conflict

XMLWordPrintable

    • 3
    • 12789

      While compiling Lustre master branch against kernel 2.6.32-431.5.1.el6 on RHEL6.5/ppc64 by using lbuild, I hit the following errors:

      /root/lustre-release/build/BUILD/lustre-2.5.55/ldiskfs/extents.c:4832: error: __ksymtab_ldiskfs_ext_pblock causes a section type conflict
      /root/lustre-release/build/BUILD/lustre-2.5.55/ldiskfs/extents.c:4832: error: __ksymtab_ldiskfs_ext_pblock causes a section type conflict
      /root/lustre-release/build/BUILD/lustre-2.5.55/ldiskfs/extents.c:4829: error: __ksymtab_ldiskfs_ext_store_pblock causes a section type conflict
      /root/lustre-release/build/BUILD/lustre-2.5.55/ldiskfs/extents.c:4829: error: __ksymtab_ldiskfs_ext_store_pblock causes a section type conflict
      

      The lbuild log "lbuild.ppc64.log" is attached.

            yujian Jian Yu
            yujian Jian Yu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: