lustre/include/darwin/lustre_lite.h
@@ -79,7 +79,7 @@ struct lookup_intent {
 	int     it_magic;
 	void    (*it_op_release)(struct lookup_intent *);
 	int     it_op;
-	int     it_flags;
+	__u64   it_flags;
 	int     it_create_mode;
 	union {
                 struct lustre_intent_data lustre;
